# OGObject

./: .gitignore  AUTHORS  Makefile  OGObject.mk.in  OGObject.oc.in  README.md  configure.ac  extra.mk.in  ogobject.sublime-project.debian12
MemoryTest/: Makefile  MemoryTest.m
src/: Info.plist  Makefile  OGErrorException.h  OGErrorException.m  OGObject.h  OGObject.m  OGObjectGObjectToWrapCreationFailedException.h  OGObjectGObjectToWrapCreationFailedException.m  OGObjectInitializationFailedException.h  OGObjectInitializationFailedException.m  OGObjectInitializationRaceConditionException.h  OGObjectInitializationRaceConditionException.m  OGObjectInitializationWrappedObjectAlreadySetException.h  OGObjectInitializationWrappedObjectAlreadySetException.m  OGObjectSignalNotFoundException.h  OGObjectSignalNotFoundException.m
tests/: Makefile  OGGObjectTests.h  OGGObjectTests.m  OGObjectTests.h  OGObjectTests.m  OGWrapperTests.h  OGWrapperTests.m
